--- a/index.html
+++ b/index.html
@@ -20,22 +20,74 @@
     <a class="fitted right item"><i class="home icon"></i></a>
     <a class="fitted item"><i class="search icon"></i></a>
     <a class="fitted item"><i class="user icon"></i></a>
-    <div class = "ui dropdown fitted item">
-      <div class = "text">MY CART
-        <i class = "search icon"></i> 0 </div>
-      <i class = "dropdown icon"></i>
-      <div class = "menu">
-        <div class = "item"> My cart is currently empty.</div>
+    <div class="ui dropdown fitted item">
+      <div class="text">MY CART
+        <i class="search icon"></i> 0
+      </div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item"> My cart is currently empty.</div>
+      </div>
     </div>
   </div>
+</div>
+
+<img class="ui centered image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/logo.png?15691486226381689305">
+
+<div class="ui borderless midmenu menu">
+  <div class="ui centered grid container">
+    <div class="ui dropdown item">
+      <div class="text">MEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">Tank Tops</div>
+        <div class="item">Shirts</div>
+        <div class="item">Long Sleeve Shirts</div>
+      </div>
     </div>
+
+    <div class="ui dropdown item">
+      <div class="text">WOMEN</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">Tank Tops</div>
+        <div class="item">Shirts</div>
+        <div class="item">Long Sleeve Shirts</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">KIDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">Shirts</div>
+        <div class="item">Onesies</div>
+        <div class="item">Sweatshirts</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">BRANDS</div>
+      <i class="dropdown icon"></i>
+      <div class="menu">
+        <div class="item">Aloha Surf Project</div>
+        <div class="item">Da Mokes</div>
+        <div class="item">Farmers Market Hawaii</div>
+      </div>
+    </div>
+
+    <a class = "item">SEARCH</a>
   </div>
+</div>
+
+
+<img class = "ui fluid image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?15691486226381689305">
 
 
 <script>
   $('.ui.dropdown')
-    .dropdown()
-;</script>
+      .dropdown()
+  ;</script>
 
 </body>
 </html>
