--- a/index.html
+++ b/index.html
@@ -83,7 +83,41 @@
 
 <img class = "ui fluid image" src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?15691486226381689305">
 
+<div class = "footer-background">
+  <div class = "ui three column grid container">
+    <div class = "column">
+      NAVIGATION
+    <hr/>
+      <div class="ui white link list">
+        <a class="item">About Us</a>
+        <a class="item">Videos</a>
+        <a class="item">Store Locations</a>
+        <a class="item">Shipping & Returns</a>
+      </div>
+    </div>
+    <div class = "column">
+      MAIN MENU
+    <hr/>
+      <div class="ui white link list">
+        <a class="item">Men</a>
+        <a class="item">Women</a>
+        <a class="item">Kids</a>
+        <a class="item">Brands</a>
+        <a class="item">Search</a>
+      </div>
+    </div>
+    <div class = "column">
+      CONNECT
+    <hr/>
+      Sign up for the latest updates
 
+      <div class="ui action input">
+        <input type="text" placeholder="Enter Email Address">
+        <button class="ui button">Join</button>
+      </div>
+    </div>
+  </div>
+</div>
 <script>
   $('.ui.dropdown')
       .dropdown()
